# DataFlow-MemTensor

./: .gitignore  README.md  pyproject.toml
data/: README.md  evidence_seed.jsonl  math_corpus.jsonl
dataflow_memtensor/: __init__.py
dataflow_memtensor/operators/: __init__.py  answer_normalize_operator.py  cot_quality_filter.py  decontamination_filter.py  difficulty_tag_operator.py  failure_pool.py  provenance_operator.py  reasoning_cot_answer_filter.py  reasoning_evidence_chain_generator.py  reasoning_evidence_grounding_filter.py  reasoning_long_cot_generator.py
dataflow_memtensor/pipelines/: __init__.py  cot_pipeline.py  evidence_pipeline.py  interleaved_pipeline.py
dataflow_memtensor/sandbox/: __init__.py  math_client.py  retrievers.py
docs/: COT_20B_PLAN.md  DATA_PLAN.md  PIPELINES_OVERVIEW.md  PIPELINE_DESIGN_20B.md  SOURCE_CATALOG.md  WHY_DATAFLOW.md
site/: README.md  build_site_data.py  data.js  index.html
viewer/: index.html  serve.py
